# ft_toolbox

./: .gitignore  README.md  fttb  main.py  pyproject.toml
.github/workflows/: python-publish.yml
src/fttb/: __main__.py  utils.py
src/fttb/cmds/: alias.py  clear.py  config.py  download.py  infos.py  list.py  remove.py  update.py  use.py
