[project]
name = "fttb"
version = "1.2.5"
authors = [
  { name="Benoit Roux", email="42benoit.roux@gmail.com" },
]
description = "CLI for jetbrains tools"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.entry-points.'fttb.fttb']
fttb = "main"

[project.scripts]
fttb = "fttb:fttb.main"

[project.urls]
Homepage = "https://github.com/BenoitRoux0/fttb"
Issues = "https://github.com/BenoitRoux0/fttb/issues"
